--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'DA'
 - !lcsh 'Great Britain -- History'
+- GITenberg
 title: "History of the English People, Volume III\r\nThe Parliament, 1399-1461; The\
   \  Monarchy 1461-1540"
 url: http://www.gutenberg.org/ebooks/20812
